--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>My Project</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
 
-<h2 style="text-align: center;">Welcome to Flask Auth</h2>
-<div style="text-align: left;">
+<h2 style="text-align: center; padding-top:10px">Welcome to Flask Auth</h2>
+<div class="row offset-1">
+<div class="col-md-7">
     <h2>Users</h2>
 <table border="1">
         <thead>
@@ -16,6 +18,7 @@
                 <th>Name</th>
                 <th>Email</th>
                 <th>Phone Number</th>
+                <th>Var code</th>
                 <th>Date</th>
             </tr>
         </thead>
@@ -26,20 +29,21 @@
                     <td>{{ user.name }}</td>
                     <td>{{ user.email }}</td>
                     <td>{{ user.phone_number }}</td>
+                    <td>{{ user.verification_code }}</td>
                     <td>{{ user.created_at }}</td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
     </div>
-<div>
+<div class="col-md-5">
     <h2>Login Attempts</h2>
     <table border="1">
         <thead>
             <tr>
                 <th>User ID</th>
                 <th>Email</th>
-                <th>Timestamp</th>
+                <th>Date</th>
                 <th>Attempts</th>
             </tr>
         </thead>
@@ -55,5 +59,6 @@
         </tbody>
     </table>
 </div>
+    </div>
 </body>
 </html>
